--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap:400,500,700'); 
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700&display=swap');
 
 * {
     box-sizing: border-box;
@@ -7,15 +7,20 @@
 body {
     background: rgba(228, 228, 228, 0.678);
     width: 2000px;
-    height: 937px;
-    font-family: 'Inter', sans-serif;
+    height: 1500px;
+    font-family: 'Inter', sans-serif !important;
 }
 
-/*body::-webkit-scrollbar {
-    width: 5px;
-    height: 40px;
-    color: rgb(119, 117, 117);
-}*/
+body::-webkit-scrollbar {    
+    width: 4px;
+    height: 4px;
+    background: transparent;
+}
+
+body::-webkit-scrollbar-thumb {    
+    border-radius: 20px;
+    background: #8b8888f8;
+}
 
 .navbar {
     position: fixed;
@@ -41,7 +46,6 @@ body {
 
 .navbar_text {
     color: white;
-    font-family: inherit;
     font-size: 12px;
     margin: auto;
 }
@@ -51,18 +55,16 @@ body {
     border-radius: 50%;
     width: 24px;
     height: 24px;
-    font-family: inherit;
     font-size: 12px;
     color: white;
-    background-color: #8b8fa8;
+    background: #8b8fa8;
     padding: 3px 0 0 6.5px;
     margin-left: 8px;
 }
 
-.navbar-login {
+.navbar__login {
     color: white;
     background: transparent;
-    font-family: inherit;
     font-size: 10px;
     border: 1px solid #444444;
     width: 57px;
@@ -71,29 +73,28 @@ body {
     margin-left: 12px;
 }
 
-.playicon-svg {
+.playvideoicon-svg {
     margin: 0 8px 0 8px;
 }
 
-.percent {
-    font-family: inherit;
+.zoomlevel {
     font-size: 10px;
     color: white;
 }
 
-.icon2-svg {
+.dropdown2-svg {
     margin: 0 14px 0 4px;
 }
 
-.wcbar-wrapper {
+.searchbar_wrapper {
     position: fixed;
-    top: 60px;
+    top: 70px;
     z-index: 100;
     height: 55px;
     width: 100%;
 }
 
-.wcbar {
+.searchbar {
     height: 100%;
     width: 780px;
     margin: 0 auto;
@@ -102,73 +103,66 @@ body {
     align-items: center;
     justify-content: center;
     border-radius: 5px;
+    font-size: 12px;
 }
 
-.wc-img {
+.figmalogo {
     width: 16px;
     height: 24px;
 }
 
-.wc-span1 {
-    font-family: inherit;
-    font-size: 12px;
+.searchbar__span-bold {
     font-weight: 700;
     padding-left: 20px;
 }
 
-.wc-span2 {
-    font-family: inherit;
-    font-size: 12px;
+.searchbar__span {
     padding: 0 18px 0 6px;
 }
 
-.wc-submit {
-    border: 2px solid black;
+.searchbar__submit {
+    border: 1.5px solid black;
     border-radius: 5px;
     height: 28px;
     background: transparent url("https://img.icons8.com/color/16/null/google-logo.png") no-repeat center left 4px;
     width: 142px;
     font-size: 10.5px;
-    font-family: inherit;
     text-align: end;
     opacity: 0.8;
     margin-right: 12px;
 }
 
-.wc-signup {
+.searchbar__signup {
     background: #14ae5c;
     color: white;
-    text-align: justify;
     border: none;
     border-radius: 5px;
     padding: 0 12px;
     height: 28px;
     font-size: 10.5px;
-    font-family: inherit;
 }
 
 .content_wrapper {
     background: transparent;
     width: 100%;
-    height: 700px;
+    height: 1070px;
     position: absolute;
-    top: 200px;
+    top: 160px;
     display: flex;
     justify-content: center;
 }
 
-.result_page {
+.resultpage {
     color: #8b8888f8;
     position: absolute;
     font-size: 9px;
-    width: 920px;
-    
+    width: 1100px;
 }
 
 .content {
     background: white;
-    width: 920px;
-    height: 685px;
+    width: 1100px;
+    height: 1055px;
     align-self: flex-end;
 }
 
@@ -176,30 +170,35 @@ body {
     display: flex;
     align-items: center;
     margin-top: 30px;
+    position: relative;
+    width: 100%;
 }
 
-.logo-svg {
+.content_logo-svg {
+    position: absolute;
     width: 60px;
     height: 60px;
-    margin: 0 90px 0 30px;
+    left: 35px;
 } 
 
-input[type="search"] {
+.content_searchinput {
     border: 2px solid rgb(206, 204, 204);
     background: transparent;
     width: 550px;
     height: 40px;
     border-radius: 6px;
+    margin: auto;
 }
 
-input[type="search"]::placeholder {
-   font-family: inherit;
+.content_searchinput::placeholder {
    font-size: 16px;
    position: relative;
    left: 8px;
 } 
 
-.mic-icon {
+.content_mic-icon {
+    position: absolute;
+    right: 320px;
     text-indent: -999px;
     overflow: hidden;
     width: 35px;
@@ -209,10 +208,11 @@ input[type="search"]::placeholder {
     cursor: pointer;
     opacity: 0.9;
     padding: 0;
-    margin-left: -70px;
 }    
 
-.search-icon {
+.content_search-icon {
+    position: absolute;
+    right: 280px;
     text-indent: -999px;
     overflow: hidden;
     width: 45px;
@@ -221,51 +221,50 @@ input[type="search"]::placeholder {
     cursor: default;
     opacity: 0.4;
     padding: 0;
-    margin-left: -10px;
 }    
 
-.alpha {
-    margin-left: 100px;
+.content_triple-A {
+    position: absolute;
     display: flex;
     align-items: center;
+    right: 35px;
 }
 
-.content_header h6 {
+.content_triple-A h6 {
     font-size: 8px;
     font-weight: 700;
     margin: 0;
 }
 
-.content_header h5 {
+.content_triple-A h5 {
     font-size: 12px;
     font-weight: 700;
     padding: 0 15px 0 15px;
     margin: 0;
 }
 
-.content_header h4 {
+.content_triple-A h4 {
     font-size: 16px;
     font-weight: 700;
     color: #0d99ff;
     margin: 0;
 }
 
-.sections {
+.content_sections {
     margin-top: 20px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
-.sections h6 {
-    font-family: inherit;
+.content_sections h6 {
     font-size: 14px;
     padding: 0 24px 0 24px;
     font-weight: 500;
     color: black;
 }
 
-.sections .all {
+.content_sections .all {
     border-bottom: 4px solid #14ae5c;
     border-radius: 1px;
     padding: 0 0;
@@ -273,8 +272,432 @@ input[type="search"]::placeholder {
     text-align: center;
 }
 
-.sections .web {
+.content_sections .web {
     padding-left: 48px;
 }
+
+.wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 50px;
+}
+
+.content_left {
+    margin-right: 16px;
+}
+
+.filters {
+    width: 250px;
+    border: 2px solid rgba(199, 197, 197, 0.678);
+    padding: 20px;
+    border-radius: 10px;
+}
+
+.highlighted {
+    font-weight: 700;
+    font-size: 14px;
+    margin-bottom: 25px;
+}
+
+.filter_type {
+    background: rgba(187, 185, 185, 0.034);
+    box-shadow: 0.5px 0.5px 2px rgba(199, 197, 197, 0.678);
+    padding: 10px;
+    border-radius: 8px;
+    margin-bottom: 20px;
+}
+
+.People {
+    margin-bottom: 0; 
+}
+
+.by_type__wrapper {
+    display: flex;
+    position: relative;
+    font-size: 12px;
+    font-weight: 600;
+    color: rgba(66, 65, 65, 0.815);
+    margin-bottom: 16px;
+}
+
+.drop_down-span__wrapper {
+    position: absolute;
+    background: transparent;
+    padding: 0;
+    width: 20px;
+    height: 20px;
+    border: none;
+    right: 5px;
+}
+
+.drop_down-span {
+    width: 100%;
+    height: 100%;
+}
+
+.date_div__wrapper {
+    display: flex;
+    align-items: center;
+    font-size: 12px;
+    font-weight: 300;
+    color: rgba(0, 0, 0, 0.712);
+    margin-bottom: 6px;
+}
+
+.unchecked {
+    -webkit-appearance: none;
+    appearance: none;
+    border-radius: 50%;
+    width: 12px;
+    height: 12px;
+    border: 2px solid rgba(199, 197, 197, 0.678);
+    margin-right: 10px;
+}
+
+.checked_wrapper {
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    border: 1.5px solid #0289e9;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 10px;
+    padding: 0;
+}
+
+.checked {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 6px;
+    height: 6px;
+    border-radius: 50%;
+    background: #0289e9; 
+    margin: 0;
+}
+
+.date_input__wrapper {
+    position: relative;
+    margin: 12px 0 8px 0;
+}
+
+.date_input {
+    border: 1px solid rgba(228, 228, 228, 0.479);
+    background: transparent;
+    padding: 10px;
+    border-radius: 20px;
+    font-size: 12px;
+    font-weight: 300;
+    color: rgb(177, 175, 175);
+    width: 100%;
+    height: 36px;
+    display: flex;
+    align-items: center;
+}
+
+.date_input::-webkit-calendar-picker-indicator {
+    font-size: 16px;
+    opacity: 0;
+    z-index: 1;
+}
+
+.calender_icon {
+    color: rgba(0, 0, 255, 0.274);
+    font-weight: 300;
+    font-size: 20px;
+    position: absolute;
+    right: 11px;
+    top: 7px;
+}
+
+.switch__wrapper {
+    display: flex;
+    margin: 12px 0 8px 0;
+}
+
+.switch {
+    margin: 0 5px;
+    width: 50px;
+    height: 20px;
+    font-size: 11px;
+    font-weight: 300;
+    background: rgba(230, 224, 224, 0.568);
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.switch_ball {
+    width: 16px;
+    height: 16px;
+    border-radius: 50%;
+    background: white;
+}
+
+.pdf {
+    padding: 0 6px;
+}
+
+.web {
+    padding: 0 4px;
+}
+
+.switch_docx {
+    background: #0289e9;
+    color: white;
+}
+
+.docx {
+    padding: 0 3.3px;
+}
+
+.form_wrapper {
+    margin-top: 12px;
+    overflow-y: scroll;
+    height: 94px;
+}
+
+::-webkit-scrollbar {
+    width: 4px;
+}
+  
+.form_wrapper::-webkit-scrollbar-track-piece {
+   background: rgb(236, 235, 235);
+   border-radius: 30px;
+}
+  
+.form_wrapper::-webkit-scrollbar-thumb {
+    background: #0289e9;
+    border-radius: 30px;
+}
+
+.checkbox_wrapper {
+    display: flex;
+    align-items: center;
+    margin-bottom: 4px;
+}
+
+.form_checkbox {
+    width: 10px;
+    height: 10px;
+}
+
+.label {
+    font-size: 13px;
+    font-weight: 300;
+    color: rgba(0, 0, 0, 0.712);
+    margin-left: 10px;
+}
+
+.content_middle {
+    width: 500px;
+}
+
+.textcolor-light {
+    font-size: 12px;
+    color: #8b8888;
+    margin: 0;
+    margin-bottom: 20px;
+}
+
+.recommended {
+    font-size: 12px;
+    margin-bottom: 22px;
+}
+
+.content_middle__div1 span {
+    background: rgba(228, 228, 228, 0.678);
+    color: #8b8888;
+    font-size: 12px;
+    border-radius: 16px;
+    padding: 8px 18px 8px 18px;
+    margin: 0 5px;
+}
+
+.content_middle__div1 .grant {
+    margin: 0 5px 0 0 ;
+}
+
+.content_middle__div1 .plus_five {
+    background: #1b9e58;
+    color: rgb(228, 228, 228);
+}
+
+.content_middle__div2 {
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.div_official {
+    border: 2px solid rgba(228, 228, 228, 0.678);
+    padding: 14px;
+    border-radius: 10px;
+    width: 500px;
+    box-shadow: 0.5px 0.5px 1px rgba(0, 0, 0, 0.3);
+    margin-bottom: 20px;
+}
+
+.textcolor-blue {
+    font-size: 13px;
+    color: #0289e9;
+    font-weight: 700;
+}
+
+.textcolor-grey {
+    display: inline-block;
+    font-size: 9.5px;
+    background: #ada9a9f8;
+    color: rgb(236, 233, 233);
+    border-radius: 16px;
+    padding: 4px 12px;
+    margin-left: 20px;
+    text-align: center;
+}
+
+.textcolor-default {
+    font-size: 12px;
+    font-weight: 500;
+}
+
+.textcolor-green {
+    color: #23d878;
+    font-size: 10px;
+    font-weight: 700;
+    margin-top: 15px;
+}
+
+.pages {
+    text-align: center;
+}
+
+.page {
+    margin: 0 7px;
+    font-size: 11px;
+    color: rgb(209, 206, 206);
+}
+
+.page_one {
+    background: #1bbb66;
+    padding: 3px 6.2px 3px 6px;
+    border-radius: 50%;
+    text-align: center;
+}
+
+.content_right {
+    margin-left: 16px;
+}
+
+.popular_topics {
+    width: 250px;
+    border: 2px solid rgba(199, 197, 197, 0.678);
+    padding: 15px;
+    border-radius: 10px;
+}
+
+.popular_topics > div {
+    border: 2px solid rgba(228, 228, 228, 0.678);
+    padding: 5px;
+    border-radius: 8px;
+    margin-bottom: 10px;
+    font-size: 13px;
+    font-weight: 600;
+    color: rgb(121, 119, 119);
+    display: flex;
+    align-items: center;
+}
+
+div .popular_topics__icon {
+    color: #46b0fc;
+    background: #dceffac0;
+    border-radius: 7px;
+    padding: 5px;
+    font-size: 20px;
+    margin-right: 10px;
+}
+
+.question_one {
+    border: 2px solid #2b8052;
+    padding: 24px 15px 15px 15px;
+    border-radius: 10px;
+    width: 250px;
+    height: 130px;
+    color: rgb(228, 228, 228);
+    background: #2b8052;
+    font-weight: 600;
+    font-size: 13px;
+    margin: 20px 0;
+}
+
+.question_one__div {
+    margin-bottom: 20px;
+}
+
+.question_one__buttonwrapper {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.question_one__no {
+    font-weight: 500;
+    font-size: 10px;
+    background: transparent;
+    border: 2.2px solid rgba(228, 228, 228, 0.678);
+    padding: 2px 18px;
+    border-radius: 5px;
+    color: inherit;
+    margin-right: 5px;
+}
+
+.question_one__yes {
+    font-weight: 500;
+    font-size: 10px;
+    background: white;
+    border: 2.2px solid rgba(228, 228, 228, 0.678);
+    padding: 2px 18px;
+    border-radius: 5px;
+    color: #2b8052;
+    margin-left: 5px;
+}
+
+.question_two {
+    border: 2px solid #0289e9;
+    padding: 15px;
+    border-radius: 10px;
+    width: 250px;
+    height: 220px;
+    color: white;
+    background-color: #0289e9;
+    font-weight: 600;
+    font-size: 13px;
+}
+
+.question_two__div {
+    margin: 10px 0;
+}
+
+.question_two__content {
+    font-weight: 100;
+    font-size: 12px;
+    margin: 18px 0;
+}
+
+.question_two__buttonwrapper {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.question_two__no {
+    font: 500;
+    font-size: 10px;
+    background: transparent;
+    border: 2.2px solid rgba(228, 228, 228, 0.678);
+    padding: 2px 18px;
+    border-radius: 5px;
+    color: white;
+}
+
+
 
 
